public_html/components/todolist/style.css
.todolist {
    height: 550px;
    background-color: #646464;
    color: white;
}

.todolist-maximized {
    width: 600px;
    animation-name: maximize;
    animation-duration: 0.5s;
    float: left;
    position: relative;
}

.todolist-minimized {
    width: 0px;
    animation-name: minimize;
    animation-duration: 0.5s;
    float: left;
    position: relative;
}

@keyframes maximize {
    from {width: 0px;}
    to {width: 600px;}
}

@keyframes minimize {
    from {width: 600px;}
    to {width: 0px;}
}

.todolist-header {
    height: 44px;
    width: 100%;
    min-width: 1px;
    float: left;
}

.todolist-content {
    height: 467px;
    width: 100%;
    min-width: 1px;
    overflow: auto;
    position: relative;
    float: left;
}

.todolist-content-info-row {
    width: 100%;
    height: 20px;
    background-color: #747474;
    bottom: 0;
    position: absolute;
}

.todolist-content-info-row-text {
    margin-top: 2px;
    margin-left: 10px;
}

.todolist-title-row {
    margin-top: 6px;
    height: 28px;
    background-color: #747474;
    width: 100%;
    float: left;
}

.todolist-title-text {
    margin-top: 2px;
    margin-left: 20px;
    font-size: 20px;
    float: left;
}

.todolist-footer {
    padding-top: 8px;
    height: 30px;
    width: 100%;
    min-width: 1px;
    background-color: #747474;
    float: left;
}

.todolist-footer-minimized {
    background-color: #565452;
}

.todolist-footer-button {
    margin-left: 40px;
    float: left;
}

.todolist-footer-button-disabled {
    background-color: #585858 !important;
    color: #626262 !important; 
}

.todolist-footer-toggle-button {
    background-color: #585858 !important;
}

.todolist-footer-toggle-button-active {
    background: none;
    background-color: #505050 !important;
}

.todolist-button {
    padding: 2px 6px 2px 6px;
    min-width: 50px;
    min-height: 20px;
    background-color: #585858;
    color: white;
    border-radius: 5px;
    font-size: 18px;
    cursor: pointer;
    float: left;
}

.todolist-button:hover {
    background-color: #505050;
}

.todolist-maximize-minimize-button {
    width: 30px;
    height: 30px;
    background-color: white;
    cursor: pointer
}

.todolist-maximize-minimize-button-left {
    float: left;
}

.todolist-maximize-minimize-button-right {
    float: right;
}

.todolist-big-arrow-right {
    background-image: url("icons/big-arrow-right.png");
    background-size: cover;
}

.todolist-big-arrow-left {
    background-image: url("icons/big-arrow-left.png");
    background-size: cover;
}

::-webkit-scrollbar {
    width: 15px;
    background-color: #F5F5F5;
}

::-webkit-scrollbar-thumb {
    background-color: #A4A4A4;
}

